[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scenes/PhaseDiagrams/H.gd" type="Script" id=1]

[node name="Hydrogen" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_vertical_guides_": [ 1112.0 ]
}

[node name="Solid" type="Polygon2D" parent="."]
color = Color( 0.682353, 0.866667, 1, 1 )
polygon = PoolVector2Array( 0, 0, 800, 0, 800, 400, 0, 400 )

[node name="Liquid" type="Polygon2D" parent="."]
color = Color( 0.776471, 1, 0.8, 1 )
polygon = PoolVector2Array( 12, 200, 16, 160, 28, 144, 28, 164, 12, 240 )

[node name="Gas" type="Polygon2D" parent="."]
color = Color( 1, 0.839216, 0.564706, 1 )
polygon = PoolVector2Array( 8, 400, 12, 240, 28, 164, 800, 164, 800, 400 )

[node name="Superfluid" type="Polygon2D" parent="."]
polygon = PoolVector2Array( 28, 144, 28, 164, 800, 164, 800, 112 )

[node name="TriplePoint" type="Polygon2D" parent="."]
color = Color( 0.87451, 0, 1, 1 )
polygon = PoolVector2Array( 0, 0, 3, 0, 3, 3, 0, 3 )

[node name="MeltPoint" type="Polygon2D" parent="."]
color = Color( 0, 0.529412, 1, 1 )
polygon = PoolVector2Array( 0, 0, 3, 0, 3, 3, 0, 3 )

[node name="BoilPoint" type="Polygon2D" parent="."]
color = Color( 1, 0, 0, 1 )
polygon = PoolVector2Array( 0, 0, 3, 0, 3, 3, 0, 3 )

[node name="SuperPoint" type="Polygon2D" parent="."]
color = Color( 0.364706, 0.282353, 0, 1 )
polygon = PoolVector2Array( 0, 0, 3, 0, 3, 3, 0, 3 )
